# cookiecutter-poetry

./: README.rst  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.github_repository_name}}/: .bumpversion.cfg  .coveragerc  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
{{cookiecutter.github_repository_name}}/.github/actions/check-version/: action.yml
{{cookiecutter.github_repository_name}}/.github/workflows/: ci.yml  documentation.yml  release-drafter.yml  release.yml
{{cookiecutter.github_repository_name}}/docs/source/: conf.py  index.rst  installation.rst  usage.rst
{{cookiecutter.github_repository_name}}/licenses/: Apache-2.0  BSD-2-Clause  BSD-3-Clause  ISC  MIT
{{cookiecutter.github_repository_name}}/requirements_setuptools/: requirements_dev.txt
{{cookiecutter.github_repository_name}}/tests/: test_{{cookiecutter.python_package_name}}.py
{{cookiecutter.github_repository_name}}/{{cookiecutter.python_package_name}}/: __init__.py  cli.py
