{% if cookiecutter.use_poetry == "y" -%}
[tool.poetry]
name = "{{ cookiecutter.python_package_name }}"
version = "{{ cookiecutter.python_package_version }}"
description = "{{ cookiecutter.project_description }}"
{%- set license_identifiers = {
    "MIT License": "MIT",
    "Apache Software License 2.0": "Apache-2.0",
    "GNU General Public License v3.0": "GPL-3.0-only",
    "GNU General Public License v3.0 or later": "GPL-3.0-or-later",
    "GNU General Public License v2.0": "GPL-2.0-only",
    "BSD 3-Clause 'New' or 'Revised' License": "BSD-3-Clause",
    "BSD 2-Clause 'Simplified' License": "BSD-2-Clause",
    "BSD License": "BSD-3-Clause",
    "GNU Lesser General Public License v2.1": "LGPL-2.1-only",
    "ISC License": "ISC",
    "Not open source": "Proprietary",
} %}
{%- if cookiecutter.open_source_license in license_identifiers %}
license = "{{ license_identifiers[cookiecutter.open_source_license] }}"
{%- endif %}
authors = ["{{ cookiecutter.author_full_name.replace('\"', '\\\"') }} <{{ cookiecutter.author_email }}>"]
readme = "README.rst"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository_name }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository_name }}"
documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.github_repository_name }}/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
{%- set license_classifiers = {
    "MIT License": "License :: OSI Approved :: MIT License",
    "Apache Software License 2.0": "License :: OSI Approved :: Apache Software License",
    "GNU General Public License v3.0": "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "GNU General Public License v3.0 or later": "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "GNU General Public License v2.0": "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "BSD 3-Clause 'New' or 'Revised' License": "License :: OSI Approved :: BSD License",
    "BSD 2-Clause 'Simplified' License": "License :: OSI Approved :: BSD License",
    "BSD License": "License :: OSI Approved :: BSD License",
    "GNU Lesser General Public License v2.1": "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "ISC License": "License :: OSI Approved :: ISC License (ISCL)",
} %}
{%- if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
{%- endif %}
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "docs",
    "tests",
    "*.rst",
    "LICENSE",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository_name }}/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
actions-toolkit = "^0.0.5"
black = "^21.5b0"
bump2version = "^1.0.1"
codecov = "^2.1.11"
coverage = "^5.5"
dunamai = "^1.5.5"
flake8 = "^3.9.1"
isort = "^5.8.0"
mypy = "^0.812"
pip-tools = "^6.1.0"
pre-commit = "^2.12.1"
pylint = "^2.8.2"
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
Sphinx = "^3.5.4"
sphinx-autoapi = "^1.8.1"

[tool.poetry.scripts]
{{ cookiecutter.python_cli_name }} = "{{ cookiecutter.python_package_name }}.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
{%- else %}
[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
{%- endif %}
